<resources>
    <string name="app_name" translatable="false">itch.io Stats</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string-array name="spinner_filter">
        <item>ALL</item>
        <item>THESE LAST 7 DAYS</item>
        <item>THESE LAST 30 DAYS</item>
    </string-array>

    <string name="no_sales_period">There is no sales in this period.</string>
    <string name="csv_integrate">Itch.io data added !</string>
    <string name="everything_deleted">Everything is deleted !</string>
    <string name="csv_problem">CSV not read, please choose a file downloaded from itch.io</string>
    <string name="no_official_app">No official app</string>
    <string name="period">PERIOD :</string>
    <string name="all">ALL</string>
    <string name="_3_bests">3 BESTS</string>
    <string name="hour">HOUR</string>
    <string name="week">WEEK</string>
    <string name="date">DATE</string>
    <string name="package_radio">PACKAGE</string>
    <string name="sales_title">SALES</string>
    <string name="price">PRICE</string>
    <string name="refresh_csv">Refresh the file (.csv)</string>
    <string name="download_from_itch">Download from itch.io</string>
    <string name="gross_total">Total gross</string>
    <string name="charges">Charges calculated</string>
    <string name="net_total">Total net</string>
    <string name="month">MONTH</string>
    <string name="nb_sales">NB SALES</string>
    <string name="total_net">TOTAL NET</string>
    <string name="country">COUNTRY</string>
    <string name="gross">GROSS</string>
    <string name="net">NET</string>
    <string name="tips">TIP</string>
    <string name="currency">CURRENCY :</string>
    <string name="sales">sales</string>
    <string name="sale">sale</string>
    <string name="Sales">Sales </string>
    <string name="instructions">INSTRUCTIONS </string>
    <string name="warning_currency">As the exchange rate of each currency is calculated directly, the prices displayed on the app may vary slightly.</string>
    <string name="delete_all">REINITIALISE APP</string>
    <string name="dialog_message">Do you really want to reinitialise the app ? </string>
    <string name="dialog_yes"> YES </string>
    <string name="dialog_no"> NO </string>
    <string name="date_format">DATE FORMAT :</string>
    <string name="month_day">Month/Day</string>
    <string name="day_month">Day/Month</string>
    <string name="usd_symbol" translatable="false">$ - USD</string>
    <string name="cad_symbol" translatable="false">$ - CAD</string>
    <string name="gbp_symbol" translatable="false">£ - GBP</string>
    <string name="eur_symbol" translatable="false">€ - EUR</string>
    <string name="jpy_symbol" translatable="false">¥ - JPY</string>
    <string name="hint_month_day" translatable="false">02/15</string>
    <string name="hint_day_month" translatable="false">15/02</string>

    <string name="instructions_title_general"><u>How use the app ? </u></string>
    <string name="instructions_title_download"><u>Download the file (.csv) : </u></string>
    <string name="instructions_download_txt_1">Click on the button <u>"Download from itch.io"</u> from the home page.</string>
    <string name="instructions_download_txt_2">It will open your web browser, if you are not connected, you will need to log in your itch.io account.</string>
    <string name="instructions_download_txt_3">Once in the <u>"Payment"</u> tab, click on <u>"Export everything as CSV"</u>.</string>
    <string name="instructions_download_txt_4">The csv file will be downloaded on your phone.</string>
    <string name="instructions_title_import"><u>Import the file : </u></string>
    <string name="instructions_import_txt_1">Click on the button <u>"Refresh the file (.csv)"</u> from the home page.</string>
    <string name="instructions_import_txt_2">It will open your file explorer. For a better readability, click on <u>"Documents"</u>.</string>
    <string name="instructions_import_txt_3">Select the csv file downloaded from itch.io.</string>



    <string-array name="list_month">
        <item>JANUARY</item>
        <item>FEBRUARY</item>
        <item>MARCH</item>
        <item>APRIL</item>
        <item>MAY</item>
        <item>JUNE</item>
        <item>JULY</item>
        <item>AUGUST</item>
        <item>SEPTEMBER</item>
        <item>OCTOBER</item>
        <item>NOVEMBER</item>
        <item>DECEMBER</item>
    </string-array>

    <string-array name="list_days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <!-- MENU -->
    <string name="home">HOME</string>
    <string name="global_graphs">GLOBAL VIEW</string>
    <string name="days_of_week">WEEK VIEW</string>
    <string name="map_countries">WORLDWIDE VIEW</string>
    <string name="history">HISTORY</string>
    <string name="settings">SETTINGS</string>



</resources>