<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@android:color/white"
    android:padding="16dp"
    tools:context=".views.fragments.GraphsFragment">

    <TextView
        android:id="@+id/text_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/period"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="@id/spinner"
        app:layout_constraintBottom_toBottomOf="@id/spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/spinner"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:textAlignment="center"
        android:textDirection="rtl"
        android:gravity="center"
        android:backgroundTint="@color/colorAccent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_filter"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        android:id="@+id/radio_group_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/btn_hour"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:shadowColor="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:buttonTint="@color/colorAccent"
            android:text="@string/hour"/>

        <RadioButton
            android:id="@+id/btn_day_of_week"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:shadowColor="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:buttonTint="@color/colorAccent"
            android:text="@string/week"/>

        <RadioButton
            android:id="@+id/btn_date"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:shadowColor="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:buttonTint="@color/colorAccent"
            android:text="@string/date"/>

        <RadioButton
            android:id="@+id/btn_package"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:shadowColor="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:buttonTint="@color/colorAccent"
            android:text="@string/package_radio"/>

    </RadioGroup>

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/MpBarView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/radio_group_currency"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

    <com.anychart.AnyChartView
        android:id="@+id/anyChartView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/radio_group_package"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/no_sales_graph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_sales_period"
        android:textStyle="italic"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group_package"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <RadioGroup
        android:id="@+id/radio_group_package"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/radio_group_currency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/btn_nb"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:shadowColor="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:buttonTint="@color/colorAccent"
            android:text="@string/sales_title"/>

        <RadioButton
            android:id="@+id/btn_price"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:shadowColor="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:buttonTint="@color/colorAccent"
            android:text="@string/price"/>
    </RadioGroup>

    <TextView
        android:id="@+id/marker_text_all_graph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="16h = 12 sales"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="8dp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/radio_group_currency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>