<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.InstructionsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".views.fragments.InstructionsFragment">

        <TextView
            android:id="@+id/instructions_title_general"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/lato"
            android:text="@string/instructions_title_general"
            android:textColor="@color/colorDark"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/instructions_title_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/instructions_title_download"
            style="@style/Text_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/instructions_title_general"/>

        <ImageView
            android:id="@+id/instructions_point_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_circle_24"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@id/instructions_download_txt_1"
            app:layout_constraintBottom_toBottomOf="@id/instructions_download_txt_1"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/instructions_download_txt_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/instructions_download_txt_1"
            style="@style/Text_body"
            app:layout_constraintStart_toEndOf="@id/instructions_point_1"
            app:layout_constraintTop_toBottomOf="@id/instructions_title_download"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/instructions_download_txt_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="16dp"
            android:text="@string/instructions_download_txt_2"
            style="@style/Text_italic"
            app:layout_constraintStart_toEndOf="@id/instructions_point_1"
            app:layout_constraintTop_toBottomOf="@id/instructions_download_txt_1"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/instructions_point_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_circle_24"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@id/instructions_download_txt_3"
            app:layout_constraintBottom_toBottomOf="@id/instructions_download_txt_3"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/instructions_download_txt_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/instructions_download_txt_3"
            style="@style/Text_body"
            app:layout_constraintStart_toEndOf="@id/instructions_point_2"
            app:layout_constraintTop_toBottomOf="@id/instructions_download_txt_2"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/instructions_download_txt_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="16dp"
            android:text="@string/instructions_download_txt_4"
            style="@style/Text_italic"
            app:layout_constraintStart_toEndOf="@id/instructions_point_1"
            app:layout_constraintTop_toBottomOf="@id/instructions_download_txt_3"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/itch_image"
            android:layout_width="0dp"
            android:layout_height="600dp"
            android:foregroundGravity="center"
            android:src="@drawable/instructions_itch"
            app:srcCompat="@drawable/instructions_itch"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/instructions_download_txt_4" />

        <TextView
            android:id="@+id/instructions_title_import"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/instructions_title_import"
            style="@style/Text_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/itch_image"/>

        <ImageView
            android:id="@+id/instructions_point_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_circle_24"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@id/instructions_import_txt_1"
            app:layout_constraintBottom_toBottomOf="@id/instructions_import_txt_1"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/instructions_import_txt_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/instructions_import_txt_1"
            style="@style/Text_body"
            app:layout_constraintStart_toEndOf="@id/instructions_point_3"
            app:layout_constraintTop_toBottomOf="@id/instructions_title_import"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/instructions_import_txt_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="16dp"
            android:text="@string/instructions_import_txt_2"
            style="@style/Text_italic"
            app:layout_constraintStart_toEndOf="@id/instructions_point_1"
            app:layout_constraintTop_toBottomOf="@id/instructions_import_txt_1"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/instructions_point_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_circle_24"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@id/instructions_import_txt_3"
            app:layout_constraintBottom_toBottomOf="@id/instructions_import_txt_3"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/instructions_import_txt_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:fontFamily="font"
            android:text="@string/instructions_import_txt_3"
            style="@style/Text_body"
            app:layout_constraintStart_toEndOf="@id/instructions_point_4"
            app:layout_constraintTop_toBottomOf="@id/instructions_import_txt_2"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/import_image"
            android:layout_width="0dp"
            android:layout_height="450dp"
            android:foregroundGravity="center"
            android:src="@drawable/instructions_import"
            app:srcCompat="@drawable/instructions_import"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/instructions_import_txt_3" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>