<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.ListMonthFragment">

    <TextView
        android:id="@+id/no_sales_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_sales_period"
        android:textStyle="italic"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/total_brut_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gross_total"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/charges_title"
            app:layout_constraintEnd_toEndOf="@id/charges_title"/>

        <TextView
            android:id="@+id/total_brut_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="300"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="@id/total_brut_title"
            app:layout_constraintStart_toStartOf="@id/charges_txt"
            app:layout_constraintEnd_toEndOf="@id/charges_txt"/>

        <TextView
            android:id="@+id/charges_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/charges"
            android:textColor="@color/colorPrimary"
            android:textStyle="italic"
            android:textSize="24sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/total_brut_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/charges_txt"/>

        <TextView
            android:id="@+id/charges_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="300"
            android:textColor="@color/colorPrimary"
            android:textStyle="italic"
            android:textSize="24sp"
            android:layout_marginEnd="48dp"
            app:layout_constraintTop_toTopOf="@id/charges_title"
            app:layout_constraintStart_toEndOf="@id/charges_title"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/total_net_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/net_total"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/charges_title"
            app:layout_constraintStart_toStartOf="@id/charges_title"
            app:layout_constraintEnd_toEndOf="@id/charges_title"/>

        <TextView
            android:id="@+id/total_net_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="300"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="@id/total_net_title"
            app:layout_constraintStart_toStartOf="@id/charges_txt"
            app:layout_constraintEnd_toEndOf="@id/charges_txt"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view_separator"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/container_total"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/view_separator">

        <TextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@android:color/white"
            android:text="@string/month"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/guideline1"
            app:layout_constraintEnd_toStartOf="@id/guideline2"/>

        <TextView
            android:id="@+id/gross"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nb_sales"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/country"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintEnd_toStartOf="@id/guideline3"/>

        <TextView
            android:id="@+id/net"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_net"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/country"
            app:layout_constraintStart_toEndOf="@id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.23" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.70" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_month"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        tools:listitem="@layout/item_month_sale"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_title" />

</androidx.constraintlayout.widget.ConstraintLayout>